<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="Achievements">Achievements</string>
    <string name="Add">Add</string>
    <string name="Apr">Apr</string>
    <string name="Art">Art</string>
    <string name="Astronomy">Astronomy</string>
    <string name="Aug">Aug</string>
    <string name="Biology">Biology</string>
    <string name="BottomPercent">bottom</string>
    <string name="BusinessFinance">Business &amp; Finance</string>
    <string name="Cancel">Cancel</string>
    <string name="Category">Category quiz</string>
    <string name="Chemistry">Chemistry</string>
    <string name="ChooseCategory">Choose a Category:</string>
    <string name="Close">Close</string>
    <string name="CorrectAnswer">You gave the correct answer</string>
    <string name="Create">Create</string>
    <string name="CurrentlyRepeatingOldQuestions">Currently repeating old questions.</string>
    <string name="Dec">Dec</string>
    <string name="Dismiss">Dismiss</string>
    <string name="Display">Show</string>
    <string name="Draw">"Game end
draw"</string>
    <string name="EarthScience">Earth science</string>
    <string name="EnterUserName">Enter your player name!</string>
    <string name="Exit">Exit</string>
    <string name="Explain">Learn</string>
    <string name="Feb">Feb</string>
    <string name="FilmHistory">Film history</string>
    <string name="FinalResultsAvailableTomorrow">The final results and the solutions will be available tomorrow.</string>
    <string name="FoodDrink">Food &amp; Drink</string>
    <string name="Forfeited">Forfeited</string>
    <string name="GameShow">Game show</string>
    <string name="GameShowFailure">Game Over</string>
    <string name="GameShowHighscore">Highscore</string>
    <string name="GameShowNewHighscore">New highscore!</string>
    <string name="GameShowSuccess">You have won the million!</string>
    <string name="GameShowTakeMoney">You took the money:</string>
    <string name="Geography">Geography</string>
    <string name="HeaderRecentQuestions">Recent</string>
    <string name="HelpEloRating">The Elo rating shows you how you compare to other players that have answered the same questions. It is calculated based on the answers of all players. The rating is affected only in normal mode, not in match mode.</string>
    <string name="HintNoRatingChangeForOldQuestions">Please mind that the rating does not change, if you answer a question that you have answered already before.</string>
    <string name="HintStopAfterQuestion">Stopping after each question. Tap anywhere to continue!</string>
    <string name="History">History</string>
    <string name="Jan">Jan</string>
    <string name="Jul">Jul</string>
    <string name="Jun">Jun</string>
    <string name="Language">Language</string>
    <string name="Literature">Literature</string>
    <string name="LoadMoreQuestions">Load more</string>
    <string name="LoadNew">Load new</string>
    <string name="Loading">Loading questions, please wait!</string>
    <string name="LoadingDescription">This game contains only \"general knowledge\" type of questions, no trivial questions from popular culture!</string>
    <string name="LoadingDescription2">Thus, this game will present a true test of your level of education.</string>
    <string name="Mar">Mar</string>
    <string name="Mathematics">Mathematics</string>
    <string name="May_short">May</string>
    <string name="MedianOfAllPlayers">Median of all players</string>
    <string name="Medicine">Medicine</string>
    <string name="MinutesShort">min</string>
    <string name="Mode">Mode</string>
    <string name="Music">Music</string>
    <string name="New">New</string>
    <string name="NoInternetConnection">No Internet Connection!</string>
    <string name="NormalMode">Endless game</string>
    <string name="Nov">Nov</string>
    <string name="NrOfPlayers">Nr of players</string>
    <string name="NrQuestionsAnsweredCorr">Answered correctly</string>
    <string name="NrQuestionsSeen">Questions played</string>
    <string name="OK">OK</string>
    <string name="Oct">Oct</string>
    <string name="OpponentLeftGame">The opponent has left the match.</string>
    <string name="OpponentTimeOut">The opponent has not answered in time.</string>
    <string name="OpponentWins">"Opponent
wins!"</string>
    <string name="OutOf">out of</string>
    <string name="OutOfPlayers">players</string>
    <string name="PercentText1">players)</string>
    <string name="Philosophy">Philosophy</string>
    <string name="Physics">Physics</string>
    <string name="PreliminaryRank">Preliminary rank:</string>
    <string name="Pro">Pro</string>
    <string name="ProVersionPromo">The pro version contains additional game modes, settings and questions.</string>
    <string name="Psychology">Psychology</string>
    <string name="QStartProVersion">You have already bought the pro version of this app. Do you want to launch the pro version?</string>
    <string name="QuestionResetHighscore">Do you want to reset the highscore?</string>
    <string name="Rank">Rank</string>
    <string name="RateIt">Give rating</string>
    <string name="Rating">Elo Rating</string>
    <string name="Religion">Religion</string>
    <string name="Repeat">Repeat</string>
    <string name="RepeatIncQuestions">Repeat questions answered incorrectly</string>
    <string name="RepeatOldQuestions">Continue</string>
    <string name="ResetHighscore">Reset</string>
    <string name="ResultCorrect">Correct:</string>
    <string name="ResultRank">Rank:</string>
    <string name="ResultTime">Time:</string>
    <string name="ResultTimeOut">Not answered in time.</string>
    <string name="Results">Results</string>
    <string name="ResultsOfTotalPlayers1">from a total</string>
    <string name="ResultsOfTotalPlayers2">Players</string>
    <string name="STEM">STEM</string>
    <string name="SecondsShort">sec</string>
    <string name="Seek">Match</string>
    <string name="Sep">Sep</string>
    <string name="SocialSciences">Social studies</string>
    <string name="SoundOff">Sound Off</string>
    <string name="SoundOn">Sound On</string>
    <string name="Sports">Sports</string>
    <string name="Start">Start</string>
    <string name="StartWeeklyChallenge1">Answer the following</string>
    <string name="StartWeeklyChallenge2">questions as fast and precisely as possible.</string>
    <string name="StartWeeklyChallenge3">You are competing against all other players.</string>
    <string name="StartWeeklyChallenge4">All players will see these questions today for the first time.</string>
    <string name="Stats">Stats</string>
    <string name="StopAfterEachQuestion">Stop after each question</string>
    <string name="Technology">Technology</string>
    <string name="TheArts">The Arts</string>
    <string name="Time">Time</string>
    <string name="TimeOut">Not answered in time.</string>
    <string name="TopPercent">Top</string>
    <string name="UnableToSignInGoogleGames">Unable to sign in. You can also play without Google Play Games.</string>
    <string name="UseGooglePlay">Google Play</string>
    <string name="ViewPagerOldResults">History</string>
    <string name="ViewPagerResults">Results</string>
    <string name="ViewPagerSolutions">Solutions</string>
    <string name="WaitingForOpponent">Waiting for opponent...</string>
    <string name="WeeklyChallenge">Sunday Challenge</string>
    <string name="WeeklyChallengeResult">Sunday Challenge: Results</string>
    <string name="Whatareyourfeelings">How do you like this app?</string>
    <string name="WrongAnswer">You gave the wrong answer</string>
    <string name="YouArePlacedTop1">"You are in the "</string>
    <string name="YouHaveAnsweredPart1">You have answered</string>
    <string name="YouHaveAnsweredPart2">questions.</string>
    <string name="YouHaveCompletedPart1">"Congratulations!
You have completed"</string>
    <string name="YouHaveCompletedPart2">questions!</string>
    <string name="YouWin">You win!</string>
    <string name="action_settings">Settings</string>
</resources>