<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/mainll1" android:background="@drawable/gradient_weekly_challenge" android:padding="15.0dip" android:layout_width="300.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:gravity="center" android:id="@id/scrollView1" android:layout_width="270.0dip" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip">
            <TextView android:textSize="20.0sp" android:textColor="@color/GhostWhite" android:gravity="center" android:id="@id/txtHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="20.0dip" android:text="@string/WeeklyChallenge" />
            <TextView android:textSize="14.0sp" android:textColor="@color/GhostWhite" android:gravity="center" android:id="@id/txtDescription1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/StartWeeklyChallenge2" />
            <TextView android:textSize="14.0sp" android:textColor="@color/GhostWhite" android:gravity="center" android:id="@id/txtDescription2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/StartWeeklyChallenge3" />
            <TextView android:textSize="14.0sp" android:textColor="@color/GhostWhite" android:gravity="center" android:id="@id/txtDescription3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/StartWeeklyChallenge4" />
        </LinearLayout>
    </ScrollView>
    <TextView android:textSize="20.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btnStart" android:background="@color/color_red_btn_start" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/Start" />
    <TextView android:textSize="14.0sp" android:textColor="@color/grey70percent" android:gravity="center" android:id="@id/btnDismiss" android:background="@color/LightGrey2" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/Dismiss" />
</LinearLayout>