<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llHolder" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/rlBlobHolder" android:background="@color/black" android:padding="35.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="28.0sp" android:gravity="center" android:id="@id/txtTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/YouHaveCompletedPart1" android:layout_centerHorizontal="true" />
        <TextView android:textSize="22.0sp" android:gravity="center" android:id="@id/txtLoadMore" android:background="@color/button" android:paddingLeft="40.0dip" android:paddingTop="20.0dip" android:paddingRight="40.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/LoadMoreQuestions" android:layout_centerHorizontal="true" />
        <TextView android:textSize="22.0sp" android:gravity="center" android:id="@id/txtRepeatOld" android:background="@color/button" android:paddingLeft="40.0dip" android:paddingTop="20.0dip" android:paddingRight="40.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/RepeatOldQuestions" android:layout_centerHorizontal="true" />
    </LinearLayout>
</LinearLayout>