<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rlBlobHolder" android:background="@color/black" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/txtLoading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/Loading" android:layout_alignParentTop="true" android:layout_alignParentBottom="false" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:id="@id/imgCaution" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:src="@drawable/blob1" android:layout_centerHorizontal="true" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/txtDescription" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/LoadingDescription" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/txtDescription2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/LoadingDescription2" />
    </LinearLayout>
</RelativeLayout>