<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/progress_rating_include" />
    <ScrollView android:id="@id/svProgress" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.timleg.quiz.UI.Help.LineChartView android:id="@id/graph" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="300.0dip" android:layout_marginTop="10.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="@color/GhostWhite" android:id="@id/txtNrSeen" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/NrQuestionsSeen" />
            <LinearLayout android:gravity="center" android:id="@id/llNrAnswered" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/GhostWhite" android:id="@id/txtNrAnswered" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NrQuestionsAnsweredCorr" />
                <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/rlPercentageInfo" android:background="@color/button" android:layout_width="50.0dip" android:layout_height="20.0dip" android:layout_marginLeft="15.0dip">
                    <View android:id="@id/vPercentageInfo" android:background="@color/percentage_color" android:layout_width="0.0dip" android:layout_height="fill_parent" />
                    <TextView android:textSize="16.0dip" android:textColor="@color/GhostWhite" android:gravity="center" android:id="@id/txtPercentageInfo" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="" />
                </RelativeLayout>
            </LinearLayout>
            <include android:id="@id/settings" android:visibility="gone" layout="@layout/settings" />
            <TextView android:textColor="@color/GhostWhite" android:id="@id/btnLoadMore" android:background="@color/OrangeRed" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LoadNew" />
            <TextView android:textSize="14.0sp" android:textColor="@color/GhostWhite" android:layout_gravity="left" android:id="@id/btnWeeklyChallenges" android:background="@color/button" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/WeeklyChallenge" />
            <TextView android:textSize="14.0sp" android:textColor="@color/GhostWhite" android:layout_gravity="left" android:id="@id/btnCategoriesStats" android:background="@color/button" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/Stats" />
            <LinearLayout android:orientation="vertical" android:id="@id/llCategoriesStats" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <LinearLayout android:orientation="vertical" android:id="@id/llHolderRecentQuestions" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>